--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./Assets/style.css">
+</head>
+<body>
+    <div class="header">
+        <p class="highScores" id="highScores">View Highscores</p>
+        <p class="timer" id="timer">Timer:</p>   
+    </div>
 
+    <div>
+        <h1>Coding Quiz Challenge</h1>
+        <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+        <button id="start">Start</button>
+    </div>
+</body>
+<script src="./Assets/script.js"></script>
+</html>
