--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <p class="timer" id="timer">Timer:</p>   
     </div>
 
-    <div>
+    <div class="wrapper">
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-        <button id="start">Start</button>
+        <div class="center">
+            <button id="start">Start</button>
+        </div>
     </div>
 </body>
 <script src="./Assets/script.js"></script>
