--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
         <p class="timer" id="timer">Timer:</p>   
     </div>
 
-    <div class="wrapper">
+    <div class="QuestionBox" id="QuestionBox">
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
         <div class="center">
             <button id="start">Start</button>
         </div>
+    </div>
+    <div class="AnswersBox" id="AnswersBox">
+        <button class="Answer" id="Answer1"></button>
+        <button class="Answer" id="Answer2"></button>
+        <button class="Answer" id="Answer3"></button>
+        <button class="Answer" id="Answer4"></button>
     </div>
 </body>
 <script src="./Assets/script.js"></script>
