Reset button added, quiz will also cycle through and log a score at the end

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <button class="Answer" id="Answer3"></button>
         <button class="Answer" id="Answer4"></button>
     </div>
+    <div>
+        <button class="reset" id="reset">Restart Quiz</button>
+    </div>
 </body>
 <script src="./Assets/script.js"></script>
 </html>
