--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="header">
         <div class="highScores" id="highScores">
-            <button class="highScorsBtn" id="highScorsBtn">View High Scores</button>
+            <button class="highScoresBtn" id="highScoresBtn">View High Scores</button>
         </div>
         <p class="timer" id="timer">Timer:</p>   
     </div>
 
     <div class="QuestionBox" id="QuestionBox">
         <h1>Coding Quiz Challenge</h1>
-        <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+        <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by fifteen seconds!</p>
         <div class="center">
-            <button id="start">Start</button>
+            <button class ="start" id="start">Start</button>
         </div>
     </div>
     <div class="AnswersBox" id="AnswersBox">
@@ -27,15 +27,23 @@
         <button class="Answer" id="Answer2"></button>
         <button class="Answer" id="Answer3"></button>
         <button class="Answer" id="Answer4"></button>
+        <p class="feedback" id="feedback"></p>
     </div>
     <div class="submitDiv" id="submitDiv">
         <p class="outputScore" id="outputScore"></p>
-        <label for="initials">Enter initails here:</label>
-        <input type="text" id="initials" name="initials"><br><br>
+        <form>
+            <label for="initials">Enter initails here:</label>
+            <input type="text" id="initials" name="initials"><br><br>
+        </form>
         <button class="reset" id="reset">Restart Quiz</button>
         <button class="submit" id="submit">Submit</button>
     </div>
-    <div class="viewHighScores" id="viewHighScores"></div>
+    <div class="viewHighScores" id="viewHighScores">
+        <h1>High Scores</h1>
+        <ul id="highscore"></ul>
+        <button class="takeQuiz" id="takeQuiz">Quiz</button>
+        <button class="clear" id="clear">Clear</button>
+    </div>
 </body>
 <script src="./Assets/script.js"></script>
 </html>
